[package]
name = "one-weekend-raytracer"
version = "1.0.0"
description = "A simple raytracer, implemented in Rust, based on 'Ray Tracing in One Weekend'."
readme = true
license = "GPL-3.0"
keywords = ["raytracing", "graphics", "rendering"]
categories = ["graphics"]

authors = ["abscosmos <joshua@dinoslice.com>"]
repository = "https://github.com/abscosmos/OneWeekendRaytracer"
edition = "2024"

[dependencies]
image = { version = "0.25.1", features = ["png", "jpeg", "default"] }
nalgebra = "0.32.5"
nalgebra-glm = "0.18.0"
rand = "0.9.2"
rayon = "1.10.0"

[lints.clippy]
unwrap_used = "warn"
